Correction de la sauvegarde pour l'enregistrement et chargement des commandes, refactor du code pour ajouter le DessinateurDessin et DessinateurEffacement